[package]
name = "pact_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive", "env"] }
clap_complete = {version =  "4.5.1", features = [] }
async-trait = "0.1.74"
tabled = "0.15.0"
base64 = "0.13.0"
serde_yaml = "0.8.23"
serde_json = "1.0"
serde = "1.0"
pact_models = { version = "~1.1.18" }
pact_matching = { version = "~1.1.10" }
anyhow = "1.0.40"
itertools = "0.12.0"
regex = "1.10.2"
log = "0.4.14"
simplelog = "0.12.1"
glob = "0.3.0"
maplit = "1.0.2"
ansi_term = "0.12.1"
futures = { version = "0.3.29", features = [] }
tokio = { version = "1.35.1", features = [] }
tracing = "0.1.40"
tracing-core = "0.1.32"
mime = "0.3.17"
thiserror = "1.0.51"
url = "2.5.0"
urlencoding = "2.1.3"

[dependencies.reqwest]
version = "0.11.23"
default-features = false
features = ["rustls-tls-native-roots", "blocking", "json"]

[dependencies.serde_with]
version = "3.4.0"
features = ["json"]

# [build-dependencies]
# clap = {version = "4.5.2", features = ["derive", "env"]}
# clap_complete = "4.5.1"

[dev-dependencies]
expectest = "0.12.0"
trycmd = "0.15.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"

[profile.release-aarch64-freebsd]
inherits = "release"
panic = "unwind"
# if panic abort is set for aarch64 freebsd, it fails in cross
# https://github.com/cross-rs/cross/issues/1363#issuecomment-1783917450
